--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -16982,3 +16982,365 @@ footer a {
     border: none;
     flex-shrink: 0
 }
+
+
+
+
+.blog-details {
+    padding-bottom: 60px
+}
+
+@media(min-width: 1200px) {
+    .blog-details {
+        padding-bottom:100px
+    }
+}
+
+.details-left {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px
+}
+
+.details-left .info-box {
+    border-radius: 12px;
+    padding: 16px;
+    background-color: rgba(var(--white),.1);
+    border: 1px solid rgba(var(--black),.1)
+}
+
+@media(min-width: 1400px) {
+    .details-left .info-box {
+        padding:24px
+    }
+}
+
+.details-left .info-box .h4,.details-left .info-box h4 {
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+    border-bottom: 1px solid rgba(var(--black),.6)
+}
+
+.table-of-content {
+    padding-left: 16px;
+    border-left: 1px solid rgba(var(--black),.2)
+}
+
+.table-of-content a.active {
+    position: relative;
+    font-weight: 500
+}
+
+.table-of-content a.active:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -17px;
+    width: 2px;
+    height: 100%;
+    background-color: rgb(var(--black))
+}
+
+.details-container {
+    max-width: 856px;
+    margin: 0 auto
+}
+
+.details-content {
+    margin-top: 80px;
+    padding: 12px;
+    border-radius: 12px;
+    background-color: hsla(0,0%,100%,.1);
+    border: 1px solid rgba(var(--black),.15)
+}
+
+@media(min-width: 1200px) {
+    .details-content {
+        padding:24px
+    }
+}
+
+@media(min-width: 1400px) {
+    .details-content {
+        padding:40px
+    }
+}
+
+.blog-video .youtube {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    justify-content: center;
+    background-color: rgb(var(--white))
+}
+
+.quote {
+    padding: 32px 0;
+    margin-bottom: 32px;
+    border-top: 1px solid rgba(var(--black),.6);
+    border-bottom: 1px solid rgba(var(--black),.6)
+}
+
+.quote p {
+    font-size: 24px;
+    font-weight: 500
+}
+
+.share {
+    border-top: 1px solid rgba(var(--black),.3);
+    border-bottom: 1px solid rgba(var(--black),.3)
+}
+
+.share form {
+    border-radius: 4px;
+    padding: 4px;
+    display: flex;
+    border: 1px solid rgba(var(--black),.2);
+    justify-content: space-between
+}
+
+.share form input {
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    padding: 10px
+}
+
+.share form input:focus {
+    outline: none
+}
+
+.share form button {
+    flex-shrink: 0;
+    background-color: rgb(var(--black));
+    padding: 12px 20px;
+    border-radius: 4px;
+    color: rgb(var(--white));
+    font-weight: 500;
+    font-size: 20px
+}
+
+.next-prev {
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px
+}
+
+@media(min-width: 1200px) {
+    .next-prev {
+        gap:60px
+    }
+}
+
+.next-prev .divider {
+    height: 66px;
+    width: 1px;
+    background-color: rgba(var(--black),.2)
+}
+
+.next-prev .article-card {
+    display: flex;
+    align-items: center;
+    max-width: 360px;
+    gap: 16px;
+    padding: 20px 20px 20px 0;
+    transition-duration: .3s;
+    border-radius: 12px;
+    border: 1px solid rgba(var(--black),.15);
+    background-color: rgba(var(--white),.1)
+}
+
+.next-prev .article-card p {
+    opacity: .6
+}
+
+.next-prev .article-card.right {
+    padding: 20px 0 20px 20px
+}
+
+.next-prev .article-card.right button {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%
+}
+
+.next-prev .article-card:hover {
+    background-color: rgb(var(--black))
+}
+
+.next-prev .article-card:hover .h5,.next-prev .article-card:hover h5,.next-prev .article-card:hover p {
+    color: rgb(var(--white))
+}
+
+.next-prev .article-card button {
+    height: 62px;
+    width: 62px;
+    border: none;
+    font-size: 1.5rem;
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%
+}
+
+.blog-card {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 12px;
+    border-radius: 12px;
+    background-color: rgba(var(--white),.1);
+    border: 1px solid rgba(var(--black),.1);
+    align-items: center;
+    transition-duration: .3s
+}
+
+.blog-card .img-wrapper {
+    flex-shrink: 0
+}
+
+.blog-card img {
+    transition-duration: .3s
+}
+
+.blog-card:hover {
+    background-color: rgba(var(--black),.03)
+}
+
+.blog-card:hover img {
+    transform: scale(1.1)
+}
+
+@media(max-width: 768px) {
+    .blog-card img {
+        width:100%
+    }
+}
+
+@media(min-width: 768px) {
+    .blog-card {
+        flex-direction:row
+    }
+}
+
+@media(min-width: 1200px) {
+    .blog-card {
+        gap:32px
+    }
+}
+
+.blog-card .details {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(var(--black),.2)
+}
+
+.newsletter {
+    background-color: rgba(var(--white),.1);
+    padding: 60px 0
+}
+
+.newsletter .content {
+    max-width: 856px;
+    margin: 0 auto
+}
+
+.newsletter .content form {
+    display: flex;
+    gap: 12px
+}
+
+.newsletter .content form input {
+    width: 100%;
+    padding: 12px;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(var(--black),.2)
+}
+
+.newsletter .content form input:focus {
+    outline: none
+}
+
+.newsletter .content form button {
+    background-color: rgb(var(--black));
+    color: rgb(var(--white));
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: none;
+    flex-shrink: 0
+}
+
+.newsletter .content input[type=checkbox] {
+    accent-color: rgb(var(--black));
+    transform: scale(1.3)
+}
+
+footer {
+    background-color: rgba(var(--black),.06);
+    padding: 32px 0
+}
+
+.underlined,footer a {
+    text-decoration: underline
+}
+
+.header-blog {
+    padding: 14px 0;
+    width: 100%;
+    z-index: 10;
+    left: 0;
+    right: 0;
+    background-color: rgb(var(--primary));
+    position: fixed
+}
+
+.header-blog img {
+    max-width: 100%
+}
+
+.connect {
+    border: 1px solid rgba(var(--black),.2);
+    padding: 4px;
+    display: flex;
+    margin-bottom: 40px;
+    border-radius: 4px;
+    gap: 12px
+}
+
+.connect input {
+    width: 100%;
+    padding: 12px;
+    background-color: transparent;
+    border-radius: 4px;
+    border: none
+}
+
+.connect input:focus {
+    outline: none
+}
+
+.connect button {
+    background-color: rgb(var(--black));
+    color: rgb(var(--white));
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: none;
+    flex-shrink: 0
+}
